# pymusas-web-api

./: .flake8  .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
pymusas_web_api/: __main__.py  example.py  server.py
tests/: test_server.py
