[metadata]
name = pymusas_web_api
version = attr:pymusas_web_api.__version__
author = Andrew Moore
author_email = andrew.p.moore94@gmail.com
description = Web API for PyMUSAS built on the FastAPI framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
zip_safe = false
python_requires = >=3.7
install_requires =
    fastapi
    uvicorn[standard]
    pymusas==0.2.0
    spacy>=3.2.0,<3.3.0
    nl_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.2.0/nl_core_news_sm-3.2.0.tar.gz#sha256=0ffee65f17c64dc971162330e6c7d16e546b37ed55564ba166ffbabc5040f8c2
    fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.2.0/fr_core_news_sm-3.2.0.tar.gz#sha256=bcdd2c8c9ccef064f549298d2c5a4f1d22d96ba85011a989125ea4477fad9334
    it_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/it_core_news_sm-3.2.0/it_core_news_sm-3.2.0.tar.gz#sha256=a7f3ea3aff27273f55fb8fc6600c9864913b2aaca056c6a06a591cdd60972181
    pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.2.0/pt_core_news_sm-3.2.0.tar.gz#sha256=e0f4c43e2dcb06b184a2ba47ab7b5aa9815ca40eb632566813939ee89b12762d
    es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.2.0/es_core_news_sm-3.2.0.tar.gz#sha256=f6b2a41ea69e3db867f94218c23635ff6838d18e7b1288e7a26798cf8c98f997
    zh_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.2.0/zh_core_web_sm-3.2.0.tar.gz#sha256=6e7474c988feeeeb1c65b3c887b6d6edef7d3bbd1c4de4140c73f1fc37b4ebfd

[options.packages.find]
exclude=
    *.tests
    *.tests.*
    tests.*
    tests

[options.extras_require]
tests = 
    mypy==0.910
    flake8>=3.8.0,<3.10.0
    isort>=5.5.4
    pytest

[options.entry_points]
console_scripts =
    pymusas_web_api = pymusas_web_api.__main__:main

[flake8]
ignore = E266, E501, W503, W293
max-line-length = 200
select = B,C,E,F,W,T4,B9
statistics = true
count = true
show_source = true



